--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,10 @@
+img {
+    width: 40px;
+    height: 40px;
+}
+
 .futureForecast {
-    background-color: navy;
+    background-color: #1b3366;
     color: white;
+    font-size: 14px;
 }
